# mpz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  DESIGN.md  README.md
.github/workflows/: rust.yml
clmul/: Cargo.toml
clmul/benches/: clmul.rs
clmul/src/: backend.rs  lib.rs
clmul/src/backend/: autodetect.rs  clmul.rs  pmull.rs  soft32.rs  soft64.rs
crates/: Cargo.toml
crates/clmul/: Cargo.toml
crates/clmul/benches/: clmul.rs
crates/matrix-transpose/src/: scalar.rs
crates/mpz-circuits/: Cargo.toml
crates/mpz-circuits-macros/: Cargo.toml
crates/mpz-circuits-macros/src/: evaluate.rs
crates/mpz-circuits/src/: circuit.rs
crates/mpz-fields/: Cargo.toml
crates/mpz-fields/src/: lib.rs
crates/mpz-ole/: Cargo.toml
crates/mpz-ole/src/: lib.rs  (+1 more)
crates/mpz-ot/: Cargo.toml
crates/mpz-share-conversion/: Cargo.toml
crates/mpz-share-conversion-core/: Cargo.toml
crates/mpz-share-conversion/src/: lib.rs  m2a.rs  receiver.rs  role.rs  sender.rs  tape.rs
garble/mpz-garble/: Cargo.toml
garble/mpz-garble-core/: Cargo.toml
garble/mpz-garble-core/benches/: encoder.rs  garble.rs
garble/mpz-garble-core/src/: circuit.rs  evaluator.rs  generator.rs  lib.rs  msg.rs
garble/mpz-garble-core/src/encoding/: encoder.rs  equality.rs  mod.rs  ops.rs  value.rs
garble/mpz-garble/benches/: deap.rs
garble/mpz-garble/src/: config.rs  internal_circuits.rs  lib.rs  memory.rs  ot.rs  registry.rs  threadpool.rs  value.rs
garble/mpz-garble/src/evaluator/: config.rs  error.rs  mod.rs
garble/mpz-garble/src/generator/: error.rs  mod.rs
garble/mpz-garble/src/protocol/deap/: error.rs  memory.rs  mock.rs  mod.rs  vm.rs
garble/mpz-garble/tests/: offline-garble.rs  semihonest.rs
matrix-transpose/: Cargo.toml
matrix-transpose/benches/: transpose.rs
matrix-transpose/src/: lib.rs  scalar.rs  simd.rs
mpz-circuits/: Cargo.toml
mpz-circuits-macros/: Cargo.toml
mpz-circuits-macros/src/: test.rs  trace.rs  visitors.rs
mpz-circuits/benches/: sha256.rs
mpz-circuits/ir_log/: template_0.txt
mpz-circuits/src/: builder.rs  circom.rs  circuit.rs  components.rs  lib.rs  main.rs  parse.rs  tracer.rs  types.rs
mpz-circuits/src/assets/: circuit.circom
mpz-circuits/src/circuits/: big_num.rs  mod.rs
mpz-circuits/src/ops/: binary.rs  uint.rs
mpz-cointoss/: Cargo.toml
mpz-cointoss-core/: Cargo.toml
mpz-cointoss-core/src/: receiver.rs
mpz-cointoss/src/: lib.rs
mpz-common/: Cargo.toml
mpz-common/src/: context.rs  id.rs  lib.rs
mpz-common/src/executor/: mod.rs  st.rs
mpz-common/src/protocol/: cointoss.rs  mod.rs
mpz-common/src/sync/: mod.rs  mutex.rs
mpz-core/: Cargo.toml  README.md
mpz-core/benches/: aes.rs  ggm.rs  lpn.rs  prg.rs
mpz-core/src/: aes.rs  block.rs  cointoss.rs  commit.rs  ggm.rs  ggm_tree.rs  hash.rs  lib.rs  lpn.rs  prg.rs  prp.rs  tkprp.rs  value.rs
mpz-core/src/cointoss/: mod.rs  msgs.rs  receiver.rs  sender.rs
mpz-fields/: Cargo.toml
mpz-fields/benches/: inverse_gf2_128.rs
mpz-fields/src/: gf2_128.rs  lib.rs  p256.rs
mpz-ole/: Cargo.toml
mpz-ole/src/: evaluator.rs  lib.rs  msg.rs  provider.rs
mpz-ole/src/ideal/: ole.rs  role.rs
mpz-ole/src/ole/: evaluator.rs  mod.rs  provider.rs
mpz-ole/src/ole/role/: evaluator.rs  mod.rs  provider.rs
mpz-ole/src/role/: mod.rs
mpz-ole/src/role/ot/: evaluator.rs  mod.rs  provider.rs
mpz-vm-core/: Cargo.toml
mpz-vm-core/src/: call_stack.rs  error.rs  function.rs  globals.rs  instruction.rs  lib.rs  register.rs  table.rs  thread.rs  value.rs
mpz-vm-core/tests/: simple.rs
mpz-vm-garble/: Cargo.toml
mpz-vm-garble/src/: circuits.rs  evaluator.rs  generator.rs  lib.rs  value.rs
mpz-vm-garble/tests/: test.rs
ole/mpz-ole/: Cargo.toml
ole/mpz-ole-core/: Cargo.toml
ole/mpz-ole/src/: lib.rs  msg.rs
ole/mpz-ole/src/ideal/: ole.rs  role.rs
ole/mpz-ole/src/ole/role/: evaluator.rs  mod.rs  provider.rs
ole/mpz-ole/src/role/: mod.rs
ole/mpz-ole/src/role/ot/: evaluator.rs  mod.rs  provider.rs
ole/mpz-ole/src/role/rot/: evaluator.rs  mod.rs  provider.rs
ot/mpz-ot/: Cargo.toml
ot/mpz-ot-core/: Cargo.toml
ot/mpz-ot-core/benches/: ot.rs
ot/mpz-ot-core/examples/: ot.rs  ote.rs  ote_random.rs
ot/mpz-ot-core/src/: lib.rs  msgs.rs
ot/mpz-ot-core/src/base/: mod.rs
ot/mpz-ot-core/src/base/dh_ot/: mod.rs  receiver.rs  sender.rs
ot/mpz-ot-core/src/chou_orlandi/: config.rs  error.rs  mod.rs  msgs.rs  receiver.rs  sender.rs
ot/mpz-ot-core/src/extension/kos15/: matrix.rs  mod.rs  utils.rs
ot/mpz-ot-core/src/extension/kos15/receiver/: mod.rs  state.rs
ot/mpz-ot-core/src/extension/kos15/sender/: mod.rs
ot/mpz-ot-core/src/ferret/: cuckoo.rs  error.rs  mod.rs  msgs.rs  receiver.rs  sender.rs  utils.rs
ot/mpz-ot-core/src/ferret/mpcot/: error.rs  mod.rs  msgs.rs  receiver.rs  receiver_regular.rs  sender.rs  sender_regular.rs
ot/mpz-ot-core/src/ferret/spcot/: error.rs  mod.rs  msgs.rs  receiver.rs  sender.rs
ot/mpz-ot-core/src/ideal/: ideal_cot.rs  ideal_mpcot.rs  ideal_spcot.rs  mod.rs
ot/mpz-ot-core/src/kos/: config.rs  error.rs  mod.rs  msgs.rs  receiver.rs  sender.rs
ot/mpz-ot/benches/: ot.rs
ot/mpz-ot/src/: lib.rs
ot/mpz-ot/src/actor/: mod.rs
ot/mpz-ot/src/actor/kos/: error.rs  mod.rs  msgs.rs  receiver.rs  sender.rs
ot/mpz-ot/src/chou_orlandi/: error.rs  mod.rs  receiver.rs  sender.rs
ot/mpz-ot/src/ideal/: cot.rs  mod.rs  ot.rs  owned.rs  rcot.rs  rot.rs  shared.rs
ot/mpz-ot/src/ideal/owned/: cot.rs  mod.rs  ot.rs  rcot.rs  rot.rs
ot/mpz-ot/src/ideal/shared/: cot.rs  mod.rs  ot.rs  rcot.rs  rot.rs
ot/mpz-ot/src/kos/: error.rs  mod.rs  receiver.rs  sender.rs  shared_receiver.rs  shared_sender.rs
ot/mpz-ot/src/mock/: mod.rs  owned.rs  shared.rs
share-conversion/mpz-share-conversion/: Cargo.toml
share-conversion/mpz-share-conversion-core/: Cargo.toml
share-conversion/mpz-share-conversion/src/: converter.rs  error.rs  lib.rs  mock.rs  ot.rs  receiver.rs  sender.rs  tape.rs
share-conversion/mpz-share-conversion/tests/: converter.rs
utils/: Cargo.toml
utils-aio/: Cargo.toml
utils-aio/src/: lib.rs
utils/src/: lib.rs
(+98 files in other folders)
