[package]
name = "mpz-circuits"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_circuits"

[features]
default = ["parse", "serde", "aes", "sha2"]
parse = ["dep:regex"]
serde = ["dep:serde", "dep:serde_arrays", "dep:bincode"]
aes = []
sha2 = ["dep:sha2"]

[dependencies]
mpz-circuits-macros = { path = "../mpz-circuits-macros" }

sha2 = { workspace = true, features = ["compress"], optional = true }

serde = { workspace = true, optional = true, features = ["derive", "rc"] }
serde_arrays = { workspace = true, optional = true }
bincode = { version = "1.3", optional = true }
rand.workspace = true

regex = { workspace = true, optional = true }
once_cell.workspace = true
thiserror.workspace = true
itybity.workspace = true

[dev-dependencies]
aes.workspace = true
criterion.workspace = true

[[bench]]
name = "sha256"
harness = false

