[package]
name = "mpz-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["sync"]
sync = []
test-utils = []

[dependencies]
mpz-core.workspace = true

futures.workspace = true
async-trait.workspace = true
scoped-futures.workspace = true
thiserror.workspace = true
serio.workspace = true
serde = { workspace = true, features = ["derive"] }
