[package]
name = "mpz-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_core"

[features]
default = []

[dependencies]
aes = { workspace = true, features = [] }
cipher.workspace = true
blake3.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
once_cell.workspace = true
itybity.workspace = true
bcs = "0.1.5"

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true
