[package]
name = "mpz-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_core"

[features]
default = ["cointoss"]
cointoss = ["dep:rand_chacha"]

[dependencies]
aes = { workspace = true, features = [] }
cipher.workspace = true
blake3.workspace = true
clmul.workspace = true
rand.workspace = true
rand_chacha = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
once_cell.workspace = true
itybity.workspace = true
opaque-debug.workspace = true
bcs = "0.1.5"
rand_core = "0.6.4"

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true

[[bench]]
name = "aes"
harness = false

[[bench]]
name = "ggm"
harness = false

[[bench]]
name = "prg"
harness = false