[package]
name = "mpz-ole"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_ole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpz-share-conversion-core.workspace = true
mpz-ot.workspace = true
mpz-core.workspace = true

tlsn-utils-aio.workspace = true

thiserror.workspace = true
async-trait.workspace = true
