[package]
name = "mpz-fields"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_fields"

[dependencies]
mpz-core.workspace = true

rand.workspace = true
ark-ff.workspace = true
ark-secp256r1.workspace = true
ark-serialize.workspace = true
num-bigint.workspace = true
opaque-debug.workspace = true
serde.workspace = true
itybity.workspace = true

[dev-dependencies]
ghash_rc.workspace = true
criterion.workspace = true

[[bench]]
name = "inverse_gf2_128"
harness = false
