[package]
name = "mpz-share-conversion"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_share_conversion"

[dependencies]
mpz-ole.workspace = true
mpz-fields.workspace = true
mpz-common.workspace = true

async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
mpz-common = { workspace = true, features = ["test-utils"] }
mpz-core.workspace = true
rand.workspace = true
