[package]
name = "mpz-garble-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_garble_core"

[profile.release]
lto = true

[dependencies]
mpz-core.workspace = true
mpz-circuits.workspace = true

aes = { workspace = true, features = [] }
cipher.workspace = true
blake3.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
regex = { workspace = true, optional = true }
once_cell.workspace = true

serde = { workspace = true, features = ["derive"] }
serde_arrays.workspace = true
thiserror.workspace = true
derive_builder.workspace = true
itybity.workspace = true

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "garble"
harness = false

[[bench]]
name = "encoder"
harness = false
