[package]
name = "mpz-ole"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_ole"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpz-share-conversion-core.workspace = true
mpz-ot.workspace = true
mpz-core.workspace = true
mpz-ole-core.workspace = true

tlsn-utils-aio.workspace = true

thiserror.workspace = true
async-trait.workspace = true
enum-try-as-inner.workspace = true
serde = { workspace = true, features = ["derive"] }
futures.workspace = true
rand.workspace = true
itybity.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }
