[package]
name = "mpz-ot-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_ot_core"

[features]
default = ["rayon"]
rayon = ["dep:rayon", "itybity/rayon", "blake3/rayon"]

[dependencies]
mpz-core.workspace = true
clmul.workspace = true
matrix-transpose.workspace = true

tlsn-utils.workspace = true

aes.workspace = true
ctr.workspace = true
blake3.workspace = true
cipher.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
rayon = { workspace = true, optional = true }
curve25519-dalek = { workspace = true, features = ["serde", "rand_core"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
derive_builder.workspace = true
itybity.workspace = true
opaque-debug.workspace = true
cfg-if.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
enum-try-as-inner.workspace = true

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true
pretty_assertions.workspace = true

[[bench]]
name = "ot"
harness = false
