[package]
name = "mpz-ot"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_ot"

[features]
default = ["ideal", "rayon", "actor"]
rayon = ["mpz-ot-core/rayon"]
actor = ["dep:serde"]
ideal = []

[dependencies]
mpz-core.workspace = true
mpz-common.workspace = true
mpz-ot-core.workspace = true
tlsn-utils-aio.workspace = true
async-trait.workspace = true
scoped-futures.workspace = true
prost.workspace = true
futures.workspace = true
futures-util.workspace = true
aes.workspace = true
cipher.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
p256 = { workspace = true, optional = true }
thiserror.workspace = true
rayon = { workspace = true }
itybity.workspace = true
enum-try-as-inner.workspace = true
opaque-debug.workspace = true
serde = { workspace = true, optional = true }
serio.workspace = true
cfg-if.workspace = true

[dev-dependencies]
rstest = { workspace = true }
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt",
    "rt-multi-thread",
] }

[[bench]]
name = "ot"
harness = false
