[package]
name = "mpz-share-conversion"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpz_share_conversion"

[features]
default = ["mock"]
serde = ["dep:serde"]
mock = []

[dependencies]
thiserror.workspace = true
mpz-ot.workspace = true
mpz-core.workspace = true
mpz-share-conversion-core.workspace = true
tlsn-utils-aio.workspace = true

async-trait.workspace = true
rand.workspace = true
rand_chacha.workspace = true
futures.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
derive_builder.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
